2006-02-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* tools/obdoc.cpp: Update to prepare wiki-fied documentation for
	the new format database/wiki on openbabel.sourceforge.net/wiki/

	* configure.in, configure, */Makefile.in: Update version number to
	2.0.1b1.

2006-01-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/main.cpp (main): Fix segfault bug reported by Mikael Johansson.

	* src/formats/turbomoleformat.cpp: Updated with bugfixes by Mikael.
	
	* src/formats/inchi/IChICan2.c: Fix AIX compilation with 'hz'
	variable contributed by Mikael.

	* src/zipstreamimpl.h: Fix compilation bug reported by Rathann
	Mierzejewski.
	
2005-11-26  Geoffrey Hutchison  <babel@geoffhutchison.net>
	
	* NEWS: Updated for 2.0.0 release final.

	* data/Makefile.am: Updated to reflect renamed SMARTS_InteLigand.txt.

	* *Makefile.in: Updated with automake.

2005-11-25  Chris Morley  <c.morley@gaseq.co.uk>

	* src/formats/mdlformat.cpp, rxnformat.cpp: Yesterdays change
	broke rxnformat. Add option to supress $$$$.
	
	* windows/obabel/OBabel.dsp: This config sees fingerprints ok.
	
	* windows/OBRunTime.dsw: rename to OpenBabel.dsw
	
2005-11-24  Chris Morley  <c.morley@gaseq.co.uk>

	* windows-vc2005: update files but struggling with wrong tags
	on some files. Renamed as OpenBabel.sln
	
	* src/INSTALL.WINDOWS: removed. (First draft 2004 by PMR)
	
	* src/README: removed. (about 2003 oblib)

2005-11-23  Chris Morley  <c.morley@gaseq.co.uk>
	
	* src/fingerprint.h, fingerprint.cpp: rearrange so that FptIndex
	has member functions.
	 
	* src/formats/fastsearchformat.cpp: Add -xu option to update
	index.

	* src/parsmart.cpp(SMARTSError): Error messages were being
	writen by fprintf(stderr... and stdout. This made no difference
	on console output but was not being picked up by the Windows GUI.
	Changed to obErrorLog style.
	
	* src/chains.cpp(GenerateByteCodes): Changed error messages to
	obErrorLog style.
	
	* zipstreamimpl.h(flush):Added test for NULL ostream, which had